# RUSTSCAN

./: .gitignore  ACTIVE_PROBES_FINAL_SUMMARY.md  ACTIVE_PROBE_LIBRARY.md  ADVANCED_OS_FINGERPRINT_SUMMARY.md  BUILD_SUMMARY.md  CLOCK_SKEW_PASSIVE.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DATABASE_AND_REPORTING_COMPLETE.md  DISTRIBUTED_CLI_FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OS_FINGERPRINTING_COMPLETE.md  OS_FINGERPRINT_EXTENDED.md  OS_FINGERPRINT_FINAL_SUMMARY.md  PRD.md  PROJECT_SUMMARY.md  PYTHON_BINDINGS.md  PYTHON_BINDINGS_SUCCESS.md  PYTHON_IMPLEMENTATION_SUMMARY.md  PYTHON_QUICKSTART.md  PYTHON_WRAPPER_FINAL_STATUS.md  QUICKSTART.md  README.md  REPORT_ENGINE_COMPLETE.md  SECURITY.md  config.toml  push_to_github.py  push_to_github.sh  pyproject.toml
examples/: active_probes_example.rs  advanced_os_fingerprint.rs  cli_profiles_example.rs  detection_example.rs  distributed_example.rs  os_fingerprint_example.rs  packet_crafting_example.rs  report_example.rs  simple_scan.rs
python/: README.md
python/examples/: __init__.py  basic_scan.py  complete_workflow.py  detection_example.py  reporting_example.py
python/nrmap/: __init__.py  api.py
python/tests/: __init__.py  test_detection.py  test_os_fingerprint.py  test_reporting.py  test_scanner.py
reports/: report_scan-a95afed5-528e-49d6-80b6-329734cc585c.json
src/: error.rs  lib.rs  logging.rs  main.rs
src/cli/: mod.rs  output.rs  profiles.rs
src/config/: mod.rs
src/detection/: banner.rs  fingerprint.rs  mod.rs  os_detection.rs
src/distributed/: agent.rs  aggregator.rs  mod.rs  scheduler.rs
src/os_fingerprint/: active_probes.rs  clock_skew.rs  database_io.rs  fingerprint_db.rs  fuzzy_matcher.rs  icmp_fingerprint.rs  matcher.rs  mod.rs  passive.rs  protocol_hints.rs  tcp_fingerprint.rs  udp_fingerprint.rs
src/packet/: crafting.rs  mod.rs  parser.rs  raw_socket.rs
src/python/: mod.rs  phase1_scanner.rs  phase2_detection.rs  phase3_os_fingerprint.rs  phase4_reporting.rs
src/report/: html.rs  json.rs  mod.rs  table.rs  yaml.rs
src/scanner/: host_discovery.rs  mod.rs  tcp_connect.rs  tcp_syn.rs  throttle.rs  udp_scan.rs
